--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
+    "@agm/js-marker-clusterer": "^1.0.0-beta.5",
+    "@agm/snazzy-info-window": "^1.0.0-beta.5",
     "@angular/animations": "~7.2.0",
     "@angular/cdk": "~7.2.1",
     "@angular/common": "~7.2.0",
@@ -26,7 +28,9 @@
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "firebase": "^5.7.3",
+    "js-marker-clusterer": "^1.0.0",
     "rxjs": "~6.3.3",
+    "snazzy-info-window": "^1.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
