--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "src/styles.css",
               "./node_modules/snazzy-info-window/dist/snazzy-info-window.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
+            
           },
           "configurations": {
             "production": {
